--- a/package.json
+++ b/package.json
@@ -12,20 +12,29 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.1",
     "@react-navigation/stack": "^7.0.1",
+    "@tanstack/react-query": "^5.60.2",
     "axios": "^1.7.7",
     "expo": "~52.0.5",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.76.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
-    "styled-components": "^6.1.13",
-    "react-native-gesture-handler": "~2.20.2"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@eslint/js": "^9.14.0",
+    "@tanstack/eslint-plugin-query": "^5.60.1",
     "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "eslint": "^9.14.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "globals": "^15.12.0",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.14.0"
   },
   "private": true
 }
