--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "expo-font": "~13.0.1",
+    "expo-splash-screen": "~0.29.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
