--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "dev": "npx expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.1",
     "@react-navigation/stack": "^7.0.1",
     "@tanstack/react-query": "^5.60.2",
     "axios": "^1.7.7",
     "expo": "~52.0.5",
+    "expo-font": "~13.0.1",
+    "expo-splash-screen": "~0.29.10",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
@@ -22,9 +26,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
-    "styled-components": "^6.1.13",
-    "expo-font": "~13.0.1",
-    "expo-splash-screen": "~0.29.10"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
