--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.1",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-actions-sheet": "^0.9.7",
+    "react-native-gesture-handler": "^2.21.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "styled-components": "^6.1.13"
